--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "react-native-web": "^0.18.12",
         "react-router-dom": "^6.8.2",
         "react-router-native": "^6.9.0",
-        "react-scripts": "^2.1.8",
+        "react-scripts": "^5.0.1",
         "styled-components": "^5.3.8",
         "typescript": "^4.9.5",
+        "uuidv4": "^6.2.13",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
