--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
         "react-scripts": "^5.0.1",
         "styled-components": "^5.3.8",
         "typescript": "^4.9.5",
+        "uuid": "^9.0.0",
         "uuidv4": "^6.2.13",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
-        "start-api": "cd api && flask run",
+        "start-api": "cd api && python -m flask run",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
