--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
         "react-native-web": "^0.18.12",
+        "react-pdf": "^6.2.2",
         "react-router-dom": "^6.8.2",
         "react-router-native": "^6.9.0",
         "react-scripts": "^5.0.1",
@@ -54,6 +55,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-pdf": "^6.2.0",
         "@types/styled-components": "^5.1.26"
     }
 }
